--- a/public/css/crud.css
+++ b/public/css/crud.css
@@ -19,9 +19,7 @@
     padding: 0.5rem 0 1rem 0;
     box-shadow: 0px -1px 1px rgba(0, 0, 0, 0.096);
     background-color: #e9d0600a;
-
 }
-
 
 .container-crud button {
     width: 100%;
@@ -36,4 +34,12 @@
 
 .padarticle {
     padding: 10rem 5rem ;
+}
+
+#delete-crud button{
+    background-color: rgb(255, 85, 0);
+}
+
+#delete-crud button:hover{
+    background-color: red;
 }
