--- a/public/css/form.css
+++ b/public/css/form.css
@@ -13,8 +13,12 @@
     padding: 20px 100px;
 }
 
+.container img{
+    object-fit: cover;
+}
+
 .contact-box{
-    max-width: 850px;
+    max-width: 950px;
     display: grid;
     grid-template-columns: repeat(2,1fr);
     justify-content: center;
@@ -26,13 +30,17 @@
 
 .contact-connect {
     width: 50%;
-    /*display: grid;*/
-    /*grid-template-columns: auto;*/
     justify-content: center;
     align-items: center;
     text-align: center;
     background-color: #fff;
     box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
+}
+
+@media (max-width: 900px) {
+    .contact-connect{
+        width: 90%;
+    }
 }
 
 .left{
