--- a/public/css/form.css
+++ b/public/css/form.css
@@ -37,8 +37,12 @@
     box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
 }
 
-@media (max-width: 900px) {
-    .contact-connect{
+@media (max-width: 1200px) {
+    .container{
+        padding: 0;
+    }
+    .contact-box, .contact-connect{
+        grid-template-columns: 1fr;
         width: 90%;
     }
 }
