--- a/public/css/article.css
+++ b/public/css/article.css
@@ -1,4 +1,4 @@
-.contitreart{
+.titre-art {
     height: 25vh;
     display: flex;
     justify-content: center;
@@ -7,76 +7,28 @@
     background: no-repeat center  url(../asset/img/BannierArticle.jpg);
 }
 
-.conteneurart {
+.container-art{
     display: flex;
     flex-direction: column;
+    font-size: 2rem;
 }
 
-.conteneurpara {
-    width: 75%;
-    font-size: 2em;
-    margin: auto;
+.header-img {
+    margin: 2rem auto;
+    width: 100%;
+    max-width: 555px;
+    padding: 1rem;    
     border: 5px solid black;
     border-radius: 8px;
-    margin: 2rem auto;
-    padding: 1rem;
+    box-shadow: 0px 0px 20px rgb(0, 0, 0);
 }
 
-.conteneurpara a {
-    color: black;
-}
-.conteneurpara a:hover{
-    text-decoration: underline;
-}
 
-.contimgart {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    padding-top: 2rem;
-}
-
-.contimgart img{
-    width: 100%;
-    max-width: 700px;
-}
-
-.imgart {
-    width: 100%;
-}
-
-@media screen and (max-width:1938px){
-    .contimgart {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .imgart {
-        width: 550px;
-        margin: auto;
-    }
-}
 
 @media screen and (max-width:938px){
-    .contitreart{
+    .titre-art{
         font-size: 2rem;
     }
-    .conteneurpara {
-        width: 95%;
-        font-size: 1.5em;
-        margin: 2rem auto;
-        border: 5px solid black;
-        border-radius: 8px;
-        padding: 1rem;
-    }
-
-    .imgart{
-        width: 100%;
-    }
-
-    .contimgart{
-        width: 100%;
-    }
+    
 }
 
