--- a/public/css/article.css
+++ b/public/css/article.css
@@ -8,27 +8,43 @@
 }
 
 .container-art{
-    display: flex;
-    flex-direction: column;
     font-size: 2rem;
+    width: 90%;
+    
 }
 
-.header-img {
-    margin: 2rem auto;
-    width: 100%;
-    max-width: 555px;
-    padding: 1rem;    
-    border: 5px solid black;
+.container-art img{
+    padding: 0.5rem;    
+    border: 3px solid black;
     border-radius: 8px;
-    box-shadow: 0px 0px 20px rgb(0, 0, 0);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.445);
+    max-width: 750px; 
 }
 
+.header-img{
+    margin: 5rem 0 10rem 0;
+}
 
+.para-art {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+    padding: 1rem;
+    margin: auto;
+}
 
 @media screen and (max-width:938px){
     .titre-art{
         font-size: 2rem;
     }
     
+    .para-art {
+        grid-template-columns: 1fr;
+        padding: 1rem 0;
+    }
+    .para-art img, .para-art p {
+        margin: auto;
+        display: block;
+    }
 }
 
