--- a/public/css/article.css
+++ b/public/css/article.css
@@ -8,17 +8,22 @@
 }
 
 .container-art{
+    /* background-color: red; */
     font-size: 2rem;
-    width: 90%;
-    
+    height: fit-content;
+    min-height: 100vh;
 }
 
 .container-art img{
+    display: block;
+    width: 100%;
+    height: 100%;
     padding: 0.5rem;    
     border: 3px solid black;
     border-radius: 8px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.445);
     max-width: 750px; 
+    margin: 2rem auto;
 }
 
 .header-img{
@@ -26,11 +31,39 @@
 }
 
 .para-art {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 1rem;
+    width: 90%;
     padding: 1rem;
+    padding-bottom: 0;
     margin: auto;
+    
+}
+
+.para-art img{
+    float: left;
+}
+.para-art img:nth-child(odd){
+    float: right;
+}
+
+.para-art p {
+    padding: 1.5rem;
+    text-align: justify;
+}
+
+
+.wiki {
+    /* background-color: green; */
+    width: 60%;
+    height: fit-content;
+    padding: 2rem;
+    z-index: 80;
+    margin: 5rem auto;
+    border: 3px solid black;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.445);
+}
+
+.wiki a {
+    color: black;
 }
 
 @media screen and (max-width:938px){
@@ -39,12 +72,15 @@
     }
     
     .para-art {
+        display: grid;
         grid-template-columns: 1fr;
-        padding: 1rem 0;
     }
     .para-art img, .para-art p {
         margin: auto;
         display: block;
+    }
+    .wiki{
+        width: 100%;
     }
 }
 
