--- a/public/css/article.css
+++ b/public/css/article.css
@@ -22,27 +22,37 @@
     border: 3px solid black;
     border-radius: 8px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.445);
-    max-width: 750px; 
-    margin: 2rem auto;
+    max-width: 600px;
 }
 
-.header-img{
-    margin: 5rem 0 10rem 0;
+.header-article {
+    width: 100%;
+    height: fit-content;
+    margin: 2rem 0 5rem 0;
+}
+.header-article img{
+    width: 90%;
+    max-width: 750px;
+    margin: auto;
 }
 
 .para-art {
     width: 90%;
-    padding: 1rem;
+    /* padding: 1rem; */
     padding-bottom: 0;
     margin: auto;
-    
+    height: fit-content;
+    /* background-color: yellow; */
 }
 
-.para-art img{
+
+.para-art  img:nth-child() {
     float: left;
+    background: red;
 }
-.para-art img:nth-child(odd){
+.para-art img:nth-child(){
     float: right;
+    background-color: green;
 }
 
 .para-art p {
