--- a/public/css/article.css
+++ b/public/css/article.css
@@ -5,11 +5,12 @@
     align-items: center;
     font-size: 3rem;
     background: no-repeat center  url(../asset/img/BannierArticle.jpg);
+    text-align: center;
 }
 
 .container-art{
     /* background-color: red; */
-    font-size: 2rem;
+    font-size: 1.5rem;
     height: fit-content;
     min-height: 100vh;
 }
@@ -22,7 +23,8 @@
     border: 3px solid black;
     border-radius: 8px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.445);
-    max-width: 600px;
+    max-width: 500px;
+    object-fit: cover;
 }
 
 .header-article {
@@ -37,25 +39,21 @@
 }
 
 .para-art {
-    width: 90%;
-    /* padding: 1rem; */
-    padding-bottom: 0;
+    width: 80%;
     margin: auto;
     height: fit-content;
-    /* background-color: yellow; */
 }
 
-.body-article  img{
+.para-art img{
     float: right;
+    margin: 0.5rem;
 }
 
-.para-art img:nth-last-of-type(even){
+.para-art:nth-last-of-type(even) img{
     float: left;
 }
 
-
 .para-art p {
-    padding: 1.5rem;
     text-align: justify;
 }
 
@@ -77,10 +75,11 @@
 
 @media screen and (max-width:938px){
     .titre-art{
-        font-size: 2rem;
+        font-size: 1.5rem;
     }
     
     .para-art {
+        width: 90%;
         display: grid;
         grid-template-columns: 1fr;
     }
