--- a/public/css/article.css
+++ b/public/css/article.css
@@ -16,15 +16,11 @@
 }
 
 .container-art img{
-    display: block;
-    width: 100%;
-    height: 100%;
+    display: block;   
     padding: 0.5rem;    
     border: 3px solid black;
     border-radius: 8px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.445);
-    max-width: 500px;
-    object-fit: cover;
 }
 
 .header-article {
@@ -45,6 +41,8 @@
 }
 
 .para-art img{
+    max-height: 400px;
+    width: auto;
     float: right;
     margin: 0.5rem;
 }
@@ -54,7 +52,9 @@
 }
 
 .para-art p {
+    text-indent: 2rem;
     text-align: justify;
+    margin-bottom: 2rem;
 }
 
 
